force-app/main/default/objects/Opportunity/fields/Assinatura_Obtida__c.field-meta.xml
<CustomField>
    <fullName>Assinatura_Obtida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assinatura Obtida</label>
    <type>Checkbox</type>
</CustomField>