force-app/main/default/objects/Opportunity/fields/Etapa_Atual_do_Path__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Atual_do_Path__c</fullName>
    <label>Etapa Atual do Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agende reunião</fullName>
            </value>
            <value>
                <fullName>Documente necessidades</fullName>
            </value>
            <value>
                <fullName>Prepare proposta</fullName>
            </value>
            <value>
                <fullName>Envie proposta</fullName>
            </value>
            <value>
                <fullName>Obtenha assinatura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>