force-app/main/default/objects/Opportunity/fields/Ignorar_validacao_de_qualidade_Opp__c.field-meta.xml
<CustomField>
    <fullName>Ignorar_validacao_de_qualidade_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignorar validação de qualidade (Opp)</label>
    <type>Checkbox</type>
</CustomField>