force-app/main/default/objects/Opportunity/fields/Motivo_bloqueio_de_avan_o__c.field-meta.xml
<CustomField>
    <fullName>Motivo_bloqueio_de_avan_o__c</fullName>
    <label>Motivo bloqueio de avanço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dados incompletos</fullName>
            </value>
            <value>
                <fullName>Documentação pendente</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
            <value>
                <fullName>Reunião não concluída</fullName>
            </value>
            <value>
                <fullName>Necessidades sem documentação</fullName>
            </value>
            <value>
                <fullName>Proposta não preparada</fullName>
            </value>
            <value>
                <fullName>Proposta não enviada</fullName>
            </value>
            <value>
                <fullName>Assinatura não obtida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>