force-app/main/default/objects/Opportunity/fields/Motivo_de_Qualidade_da_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Qualidade_da_Opportunity__c</fullName>
    <label>Motivo de Qualidade da Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sem Amount</fullName>
            </value>
            <value>
                <fullName>Sem Close Date</fullName>
            </value>
            <value>
                <fullName>Dados incompletos para estágio</fullName>
            </value>
            <value>
                <fullName>Override manual</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>