force-app/main/default/objects/Opportunity/fields/Necessidades_Documentadas__c.field-meta.xml
<CustomField>
    <fullName>Necessidades_Documentadas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessidades Documentadas</label>
    <type>Checkbox</type>
</CustomField>