force-app/main/default/objects/Opportunity/fields/Opportunity_Completa__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Completa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Completa?</label>
    <type>Checkbox</type>
</CustomField>