force-app/main/default/objects/Opportunity/fields/Proposta_Enviada__c.field-meta.xml
<CustomField>
    <fullName>Proposta_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposta Enviada</label>
    <type>Checkbox</type>
</CustomField>