force-app/main/default/objects/Opportunity/fields/Proposta_Preparada__c.field-meta.xml
<CustomField>
    <fullName>Proposta_Preparada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposta Preparada</label>
    <type>Checkbox</type>
</CustomField>