force-app/main/default/objects/Opportunity/fields/Reuniao_Concluida__c.field-meta.xml
<CustomField>
    <fullName>Reuniao_Concluida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reuniao Concluida</label>
    <type>Checkbox</type>
</CustomField>