force-app/main/default/objects/Opportunity/fields/Ultima_transicao_de_Path__c.field-meta.xml
<CustomField>
    <fullName>Ultima_transicao_de_Path__c</fullName>
    <label>Última transição de Path</label>
    <type>DateTime</type>
</CustomField>