force-app/main/default/objects/Opportunity/recordTypes/TechFlow_Sales_Process.recordType-meta.xml
<RecordType>
    <fullName>TechFlow_Sales_Process</fullName>
    <active>true</active>
    <businessProcess>TechFlow Sales Process</businessProcess>
    <description>Funil de vendas padronizado TechFlow</description>
    <label>TechFlow Sales Process</label>
</RecordType>