force-app/main/default/objects/Opportunity/validationRules/VR_Opp_Amount_CloseDate_Por_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Opp_Amount_CloseDate_Por_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(StageName),  

OR(
    ISPICKVAL(StageName, &quot;Qualification&quot;),
    ISPICKVAL(StageName, &quot;Proposal&quot;),
    ISPICKVAL(StageName, &quot;Negotiation/Review&quot;)
  ),
  OR(
    ISBLANK( Amount ),
    ISBLANK( CloseDate )
  ),
  NOT( Ignorar_validacao_de_qualidade_Opp__c )
)</errorConditionFormula>
    <errorMessage>Nesta etapa, Valor e Data de Fechamento estimada são obrigatórios.</errorMessage>
</ValidationRule>